• Created settings preferences with theme and sort order options.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,15 @@
         </activity>
         <activity
             android:name=".HomeActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.example.booklat.SettingsActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="Settings" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
     </application>
 
